RESOLVED FIXED256293
Reveal focused input element in an event loop task instead of a post layout task
https://bugs.webkit.org/show_bug.cgi?id=256293
Summary Reveal focused input element in an event loop task instead of a post layout task
Ryosuke Niwa
Reported 2023-05-03 21:02:40 PDT
Don't use post layout task to reveal selection for the focused input element.
Attachments
Ryosuke Niwa
Comment 1 2023-05-03 21:05:51 PDT
EWS
Comment 2 2023-05-04 00:03:48 PDT
Committed 263665@main (765616e80351): <https://commits.webkit.org/263665@main> Reviewed commits have been landed. Closing PR #13434 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-05-04 00:04:17 PDT
Note You need to log in before you can comment on or make changes to this bug.