Reveal focused input element in an event loop task instead of a post layout task https://bugs.webkit.org/show_bug.cgi?id=256293

Reviewed by Wenson Hsieh.

Call updateFocusAppearance in an event loop task instead of a post layout task
after didAttachRenderers when the input element is focused.

* Source/WebCore/html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::didAttachRenderers):

Canonical link: https://commits.webkit.org/263665@main